--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 fastapi>=0.68.0,<0.69.0
 pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
+redis
+simplejson
+mariadb
 jinja2==3.0.3
+pymysql
+toml
+moment
 aiofiles
+python-multipart
+marko
