--- a/app/blog/2024-12-06-tangotasker.toml
+++ b/app/blog/2024-12-06-tangotasker.toml
@@ -2,6 +2,7 @@ title = "TangoTasker - Productivity App"
 description = "I’m very pleased to announce TangoTasker, a brand new app for productivity."
 topic = "Projects"
 published = "December 6, 2024"
+image = "20241030_tangotasker_launch.png"
 
 markdown = """
 
